# SmallC-Interpreter

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  llms.txt  main.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
examples/: factorial.c  fibonacci.c  hello.c  pointers.c
smallc/: __init__.py  ast_nodes.py  builtins.py  errors.py  interpreter.py  lexer.py  memory.py  parser.py  preprocessor.py  repl.py  symtable.py  tokens.py
